--- a/_posts/2014-4-26-reg.markdown
+++ b/_posts/2014-4-26-reg.markdown
@@ -8,7 +8,7 @@ categories: reg
 
 ###	元字符
 
-( [ { \ ^ $ | ) ? * + .
+( [ { \ ^ $ \| ) ? * + .
 
 
 ###	预定义的特殊字符
@@ -187,7 +187,7 @@ alert(newNum)
 
 ###	候选
 
-继续在分组上做文章。在分组中插入管道符（“|”），把它划分为两个或多个候多项。
+继续在分组上做文章。在分组中插入管道符（“\|”），把它划分为两个或多个候多项。
 
 {% highlight javascript %}
 var reg = /(red|black|yellow)!!/;
