--- a/_posts/2014-4-26-reg.markdown
+++ b/_posts/2014-4-26-reg.markdown
@@ -110,7 +110,7 @@ alert(/./.test(a))//true
 
 由于元字符与特殊字符或字符类或者它们的组合（中括号）甚至它们的马甲（预定义类）都是一对一进行匹配。我们要匹配一长串字符，最简单都要/..../，如果长到50多个字符岂不是要死人。因此我们逼切需要一个简单的操作，来处理这数量关系。
 
-#####	简单量词
+**简单量词**
 
 |代码	|类型		|描述|
 |-------|-----------|----|
@@ -135,7 +135,7 @@ alert(/[ruby]{2}/.test("ry"))//true
 /[\u4e00-\u9fa5]/用于匹配单个汉字。
 {% endhighlight %}
 
-#####	贪婪量词，惰性量词与支配性量词
+**贪婪量词，惰性量词与支配性量词**
 
 **贪婪量词**，上面提到的所有简单量词。就像成语中说的巴蛇吞象那样，一口吞下整个字符串，发现吞不下（匹配不了），再从后面一点点吐出来（去掉最后一个字符，再看这时这个整个字符串是否匹配，不断这样重复直到长度为零）
 
